--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -13,11 +13,9 @@ jobs:
       CLUSTER_NAME: nti-nonprod-eks
 
     steps:
-      # 1️⃣ Checkout
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -25,7 +23,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # 3️⃣ Install kubectl (local, no sudo)
+      # ==========================
+      # Install kubectl if missing
+      # ==========================
       - name: Install kubectl (if missing)
         run: |
           if command -v kubectl >/dev/null 2>&1; then
@@ -35,13 +35,13 @@ jobs:
             echo "Installing kubectl..."
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
             chmod +x kubectl
-            mkdir -p $HOME/.local/bin
-            mv kubectl $HOME/.local/bin/kubectl
-            echo "$HOME/.local/bin" >> $GITHUB_PATH
+            sudo mv kubectl /usr/local/bin/kubectl
             kubectl version --client
           fi
 
-      # 4️⃣ Install Helm (local, no sudo)
+      # ==========================
+      # Install Helm (Kali safe way)
+      # ==========================
       - name: Install Helm (if missing)
         run: |
           if command -v helm >/dev/null 2>&1; then
@@ -49,57 +49,73 @@ jobs:
             helm version
           else
             echo "Installing Helm..."
-            curl -fsSL https://get.helm.sh/helm-v3.14.4-linux-amd64.tar.gz -o helm.tar.gz
-            tar -xzf helm.tar.gz
-            chmod +x linux-amd64/helm
+            
             mkdir -p $HOME/.local/bin
+
+            curl -fsSL -o helm.tar.gz https://get.helm.sh/helm-v3.17.0-linux-amd64.tar.gz
+            tar -xzf helm.tar.gz
             mv linux-amd64/helm $HOME/.local/bin/helm
+            chmod +x $HOME/.local/bin/helm
+
             echo "$HOME/.local/bin" >> $GITHUB_PATH
+
             helm version
           fi
 
-      # 5️⃣ Update kubeconfig
+      # ==========================
+      # Update kubeconfig
+      # ==========================
       - name: Update kubeconfig
         run: |
           aws eks update-kubeconfig \
             --region $AWS_REGION \
             --name $CLUSTER_NAME
 
-      # 6️⃣ Verify cluster access
       - name: Verify cluster access
         run: kubectl get nodes
 
-      # 7️⃣ Namespaces
+      # ==========================
+      # Create namespaces
+      # ==========================
       - name: Create namespaces
         run: kubectl apply -f bootstrap/namespaces.yaml
 
-      # 8️⃣ Ingress NGINX
+      # ==========================
+      # Install Ingress Controller
+      # ==========================
       - name: Install Ingress NGINX
         run: bash bootstrap/helm/ingress-nginx.sh
 
-      # 9️⃣ ArgoCD
+      # ==========================
+      # Install ArgoCD
+      # ==========================
       - name: Install ArgoCD
         run: bash bootstrap/helm/argocd.sh
 
-      # 🔟 Datadog
+      # ==========================
+      # Install Datadog
+      # ==========================
       - name: Install Datadog
         run: bash bootstrap/helm/datadog/install-datadog.sh
         env:
           DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY }}
           CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
 
-      # 11️⃣ Setup Terraform
+      # ==========================
+      # Setup Terraform
+      # ==========================
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
-      # 12️⃣ Terraform Init (Read Outputs)
       - name: Terraform Init (Read Outputs)
         working-directory: terraform
         run: terraform init
 
-      # 13️⃣ Export External Secrets Role ARN
+      # ==========================
+      # Export External Secrets Role ARN
+      # ==========================
       - name: Export External Secrets Role ARN
         working-directory: terraform
         run: |
@@ -107,10 +123,13 @@ jobs:
           echo "EXTERNAL_SECRETS_ROLE_ARN=$ROLE_ARN" >> $GITHUB_ENV
           echo "External Secrets Role ARN: $ROLE_ARN"
 
-      # 14️⃣ External Secrets Operator
+      # ==========================
+      # Install External Secrets Operator
+      # ==========================
       - name: Install External Secrets Operator
         run: bash bootstrap/helm/external-secrets/install-external-secrets.sh
+        env:
+          EXTERNAL_SECRETS_ROLE_ARN: ${{ env.EXTERNAL_SECRETS_ROLE_ARN }}
 
-      # 15️⃣ Verify External Secrets Operator
       - name: Verify External Secrets Operator
         run: kubectl get pods -n external-secrets
