--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Set Image Tag
-        run: |
-          echo "IMAGE_TAG=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        run: echo "IMAGE_TAG=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Build, tag, and push image to ECR
         run: |
@@ -44,21 +43,5 @@ jobs:
 
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
-      - name: Update GitOps Deployment Image Tag
-        run: |
-          sed -i "s|image:.*|image: ${IMAGE_URI}|g" gitops/sample-app/deployment.yaml
-
-      - name: Commit & Push GitOps changes
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-
-          git add gitops/sample-app/deployment.yaml
-          git commit -m "Update sample-app image tag to ${IMAGE_TAG}" || echo "No changes to commit"
-
-          git pull --rebase origin main
-          git push origin main
-
       - name: Print Image URI
-        run: |
-          echo "Pushed image: ${IMAGE_URI}"
+        run: echo "Pushed image: ${IMAGE_URI}"
