Fix CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: CI - Build & Push Docker Image
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -31,7 +32,9 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Set Image Tag
-        run: echo "IMAGE_TAG=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        id: vars
+        run: |
+          echo "IMAGE_TAG=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Build, tag, and push image to ECR
         run: |
@@ -43,29 +46,16 @@ jobs:
 
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
-      - name: Find deployment.yaml path
-        run: |
-          echo "Searching for deployment.yaml ..."
-          find gitops -type f -name "deployment.yaml"
-
       - name: Update GitOps Deployment Image Tag
         run: |
-          DEPLOYMENT_FILE=$(find gitops -type f -name "deployment.yaml" | head -n 1)
-
-          if [ -z "$DEPLOYMENT_FILE" ]; then
-            echo "deployment.yaml not found inside gitops/"
-            exit 1
-          fi
-
-          echo "Found deployment file: $DEPLOYMENT_FILE"
-          sed -i "s|image:.*|image: ${IMAGE_URI}|g" $DEPLOYMENT_FILE
+          sed -i "s|image:.*|image: ${IMAGE_URI}|g" gitops/nonprod/sample-app/deployment.yaml
 
       - name: Commit & Push GitOps changes
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-          git add gitops/
+          git add gitops/nonprod/sample-app/deployment.yaml
           git commit -m "Update sample-app image tag to ${IMAGE_TAG}" || echo "No changes to commit"
 
           git pull --rebase origin main
