--- a/bootstrap/namespaces.yaml
+++ b/bootstrap/namespaces.yaml
@@ -7,3 +7,13 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: argocd
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: external-secrets
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: datadog
