--- a/gitops/nonprod/sample-app/deployment.yaml
+++ b/gitops/nonprod/sample-app/deployment.yaml
@@ -33,16 +33,18 @@ spec:
               value: "messages"
 
           readinessProbe:
-            tcpSocket:
+            httpGet:
+              path: /health
               port: 3000
-            initialDelaySeconds: 15
+            initialDelaySeconds: 10
             periodSeconds: 10
             failureThreshold: 5
 
           livenessProbe:
-            tcpSocket:
+            httpGet:
+              path: /health
               port: 3000
-            initialDelaySeconds: 30
+            initialDelaySeconds: 20
             periodSeconds: 15
             failureThreshold: 5
 
