--- a/gitops/nonprod/sample-app/redis-service.yaml
+++ b/gitops/nonprod/sample-app/redis-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-app-service
+  name: redis
   namespace: default
 spec:
   selector:
-    app: sample-app
+    app: redis
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 6379
+      targetPort: 6379
   type: ClusterIP
